--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,9 +1,15 @@
+#De Prueba
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendng?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+#Produccion
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendng?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-server.port=8072
+#server.port=8072
+spring.datasource.url=jdbc:mysql://uhyg4bqxvc0cooag:U4zDfNB4393kmrV1C64j@bhiuubgvgnmb2zgb2ate-mysql.services.clever-cloud.com:3306/bhiuubgvgnmb2zgb2ate
+spring.datasource.username=bhiuubgvgnmb2zgb2ate
+spring.datasource.password=U4zDfNB4393kmrV1C64j
 #jwt
 jwt.secret = secret
 jwt.expiration = 4000
